complete bootstrap navbar 2

--- a/index.html
+++ b/index.html
@@ -45,6 +45,30 @@
             </div>
         </div>
 
+        <div id="navbar2">
+            <div class="navbar-expand-lg bg-light">
+                <div class="py-2 container">
+                    <div class="mx-auto navbar-nav" style="justify-content: center;">
+                        <img src="./img/experience-bootstrap-navbars-morning-brew-logo.png" style="height: 60px;">
+                    </div>
+                </div>
+            </div>
+
+            <div class="navbar navbar-expand-lg bg-light sticky-top">
+                <div class="container">
+                    <div class="mx-auto navbar-nav">
+                        <div class="nav-item border-1 border-top border-dark active border-3">Home</div>
+                        <div class="nav-item border-1 border-top border-dark">Order Online</div>
+                        <div class="nav-item border-1 border-top border-dark">Menus</div>
+                        <div class="nav-item border-1 border-top border-dark">Locations</div>
+                        <div class="nav-item border-1 border-top border-dark">About</div>
+                        <div class="nav-item border-1 border-top border-dark">Shop</div>
+                        <div class="nav-item border-1 border-top border-dark">Contact</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <script src="" async defer></script>
     </body>
 </html>
