complete bootstrap navbar 3

--- a/index.html
+++ b/index.html
@@ -69,6 +69,46 @@
             </div>
         </div>
 
+        <!-- navbar 3 start -->
+        <div id="navbar3">
+            <div class="container-fluid px-0">
+                <div class="navbar navbar-expand-lg bg-gradient">
+                    <div class="py-3 container">
+                        <ul class="nav justify-content-start">
+                            <li>
+                                <h4 class="px-2">LUNCH</h4>
+                            </li>
+                            <li>
+                                <h4 class="px-2">DINNER</h4>
+                            </li>
+                            <li>
+                                <h4 class="px-2">DRINKS & PUPU</h4>
+                            </li>
+                        </ul>
+
+                        <ul class="nav justify-content-center">
+                            <img src="./img/experience-bootstrap-navbars-buzzs-logo.png" style="height: 70px;">
+                        </ul>
+
+                        <ul class="nav justify-content-end">
+                            <li>
+                                <h4 class="px-2">ABOUT</h4>
+                            </li>
+                            <li>
+                                <h4 class="px-2">LOCATION</h4>
+                            </li>
+                            <li>
+                                <h4 class="px-2">SHOP</h4>
+                            </li>
+                            <li>
+                                <i class="px-2 bi bi-cart"></i>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <script src="" async defer></script>
     </body>
 </html>
