--- a/index.html
+++ b/index.html
@@ -109,6 +109,44 @@
             </div>
         </div>
 
+        <!-- navbar 4 start -->
+        <div id="navbar4">
+            <div class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container">
+                    <div class="navbar-brand">
+                        <img src="./img/experience-bootstrap-navbars-aloha-beer-logo.png">
+                    </div>
+                    <div class="nav justify-content-center">
+                        <div class="nav-link">
+                            Locations & Menus
+                        </div>
+                        <div class="nav-link">
+                            Events
+                        </div>
+                        <div class="nav-link">
+                            Brewery
+                        </div>
+                        <div class="nav-link" style="color: #EDC601;">
+                            Shop
+                        </div>
+                    </div>
+                    <div class="nav justify-content-end">
+                        <div class="nav-link">
+                            Account
+                        </div>
+                        <div class="nav-link">
+                            Search
+                            <i class="bi bi-search"></i>
+                        </div>
+                        <div class="nav-link">
+                            Cart
+                            <i class="bi bi-cart3"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <script src="" async defer></script>
     </body>
 </html>
