complete bootstrap navbar 5

--- a/index.html
+++ b/index.html
@@ -147,6 +147,53 @@
             </div>
         </div>
 
+        <!-- navbar5 start -->
+        <div id="navbar5">
+            <div class="container-fluid" style="background-color: #017574; color: white;">
+                <div class="navbar">
+                    <div class="container">
+                        <ul class="nav justify-content-start">
+                            <li>
+                                <img src="./img/experience-bootstrap-navbars-dukes-logo.png" style="width: 200px;">
+                            </li>
+                        </ul>
+                        <ul class="nav justify-content-end">
+                            <li>
+                                <div class="nav-item nav-link">
+                                    MENUS
+                                </div>
+                            </li>
+                            <li>
+                                <div class="nav-item nav-link">
+                                    DUKE
+                                </div>
+                            </li>
+                            <li>
+                                <div class="nav-item nav-link">
+                                    SHOP
+                                </div>
+                            </li>
+                            <li>
+                                <div class="nav-item nav-link">
+                                    JOIN OUR TEAM
+                                </div>
+                            </li>
+                            <li>
+                                <div class="nav-item nav-link">
+                                    CONTACT
+                                </div>
+                            </li>
+                            <li>
+                                <div class="nav-item nav-link" style="color: #F1A228;">
+                                    ORDER TAKEOUT & DELIVERY
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <script src="" async defer></script>
     </body>
 </html>
